--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </main>
   <footer>
     <div class="footertag">
-      Copyright @ The Odin Project 2021
+      Copyright @ The Odin Project 2021 | v1.2
     </div>
   </footer>
 </body>
